<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView

        android:id="@+id/tvTitlleEditDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dilogtitle"

        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/rgRAdioGr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"/>


    <RadioGroup
        android:id="@+id/rgRAdioGr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitlleEditDialog">

        <RadioButton
            android:id="@+id/rbUpperCAse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upper"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/rbLowerCaes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lower"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/rbInitCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initcap"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/cbReverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reverse"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/btnDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgRAdioGr" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/rgRAdioGr"
        app:layout_constraintRight_toLeftOf="@+id/cbReverse" />
</androidx.constraintlayout.widget.ConstraintLayout>